--- a/votreDossier/index.html
+++ b/votreDossier/index.html
@@ -15,6 +15,7 @@
             </div>
         </nav>
    </header>
+
    <main>
     <section class="my-5">
         <div class="container">
@@ -30,6 +31,86 @@
             </div>
         </div>
     </section>
-   </main>
+
+    <section class="bg-light py-5">
+        <div class="container">
+            <h2>Mon expertise</h2>
+            <h3>Développement web et design</h3>
+            <div class="row mt-5">                
+                <div class="col-7">
+                    <div class="bg-secondary h-100 w-100"></div>
+                </div>
+                <div class="offset-1 col-4">
+                    <img src="img/code.jpg" alt="écran montrant du code" width="100%">
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-4">
+                    <img src="img/design.jpg" alt="écran montrant du design" width="100%">
+                </div>
+                <div class="offset-1 col-7">
+                    <div class="bg-secondary h-100 w-100"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-5">
+        <div class="container">
+            <h2>Mon portfolio</h2>
+            <h3>Projets perso et pro</h3>
+            <div class="row gy-4 mt-4">
+                <div class="col-3">
+                    <div class="bg-secondary h-100 w-100 py-5">
+                    </div>
+                  </div>
+                  <div class="col-3">
+                    <div class="bg-secondary h-100 w-100 py-5">
+                    </div>
+                  </div>
+                  <div class="col-3">
+                    <div class="bg-secondary h-100 w-100 py-5">
+                    </div>
+                  </div>
+                  <div class="col-3">
+                    <div class="bg-secondary h-100 w-100 py-5">
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-light py-5">
+        <div class="container">
+            <h2>Un projet de création web ?</h2>
+            <h3>Allons en discuter autour d'un café</h3>
+            <div class="row mt-5">
+                <div class="col-5">
+                    <img src="img/grab-a-coffee.jpg" alt="Image d'une tasse de café" width="100%">
+                  </div>
+                  <div class="offset-1 col-6">
+                    <div class="bg-secondary h-100 w-100">
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </section>
+    </main>
+
+    <footer class="border-top">
+        <div class="container py-5">
+            <div class="row">
+              <div class="col-4">
+                <div class="bg-secondary py-5"></div>
+              </div>
+              <div class="col-4">
+                <div class="bg-secondary py-5"></div>
+              </div>
+              <div class="col-4">
+                <div class="bg-secondary py-5"></div>
+              </div>
+            </div>
+          </div>
+    </footer>
 </body>
 </html>
