--- a/votreDossier/index.html
+++ b/votreDossier/index.html
@@ -19,13 +19,13 @@
    <main>
     <section class="my-5">
         <div class="container">
-            <div class="row">
-                <div class="col">
+            <div class="row gy-4 gy-md-0">
+                <div class="col-12 col-md-6">
                     <h1>Je suis John Doe Développeur et Designer Web</h1>
                     <h2>Bienvenue dans mon univers</h2>
                     <button>Mon expertise web</button>
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-6"">
                     <img src="img/portrait.jpg" alt="portrait de John Doe" class="w-100">
                 </div>
             </div>
